--- a/src/main/resources/templates/inquiry/list.html
+++ b/src/main/resources/templates/inquiry/list.html
@@ -11,7 +11,7 @@
     <div class="List-con">
         <div class="List-title">
             <div class="title">
-                <h1>문의사항</h1>
+                <h1>문의사항 <img th:src="@{/images/inquiry.png}" alt="notice"></h1>
             </div>
         </div>
         <div class="search">
