--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -4,51 +4,58 @@
     <meta charset="UTF-8">
     <title>문의사항 상세 페이지</title>
     <link rel="stylesheet" th:href="@{/css/inquiry/detail.css}">
+    <script th:src="@{/js/inquiry/write.js}" defer="defer"></script>
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <div class="container">
     <div class="detail">
         <div class="detail-con">
-            <div class="board-con">
+            <div class="title">
                 <h1>문의사항</h1>
-                <ul>
-                    <li>
-                        <span>제목</span>
-                        <span th:text = "${inquiryDto.inquiryTitle}"></span>
-                    </li>
-                    <li>
-                        <span>작성자</span>
-                        <span th:text="${inquiryDto.inquiryWriter}"></span>
-                    </li>
-                    <li>
-                        <span>작성날짜</span>
-                        <span th:text="${#temporals.format(inquiryDto.CreateTime, 'yyyy년 MM월 dd일 hh시 mm분')}"></span>
-                    </li>
-                    <li>
-                        <span>수정날짜</span>
-                        <span th:text="${#temporals.format(inquiryDto.UpdateTime, 'yyyy년 MM월 dd일 hh시 mm분')}"></span>
-                    </li>
-                    <li>
-                        <span>조회수</span>
-                        <span th:text = "${inquiryDto.inqHit}"></span>
-                    </li>
-                    <li>
-                        <span th:text = "${inquiryDto.inquiryContent}" class="content"></span>
-                    </li>
-                    <li>
-                        <a th:href="@{/inquiry/delete/{id}(id=${inquiryDto.inqId})}">삭제하기</a>
-                        <a th:href="@{/inquiry/update/{id}(id=${inquiryDto.inqId})}">수정하기</a>
-                    </li>
-                    <li>
-                        <a th:href="@{/inquiry/list?page=0&select&search=}">LIST</a>
-                    </li>
-                </ul>
+            </div>
+            <div class="board-con">
+                <div class="top">
+                    <div class="top-title">
+                        <span th:text = "${inquiryDto.inqType}" class="typeSpan"></span>
+                        <span th:text = "${inquiryDto.inquiryTitle}" class="titleSpan"></span>
+                    </div>
+                    <div class="top-bottom">
+                        <div class="left">
+                            <span th:text="${#temporals.format(inquiryDto.CreateTime,'yyyy년 MM월 dd일 hh:mm')}"></span>
+                            <span th:text="${#temporals.format(inquiryDto.UpdateTime,'yyyy년 MM월 dd일 hh:mm')}"></span>
+                        </div>
+                        <div class="right">
+                            <span th:text = "${inquiryDto.inquiryWriter}"></span>
+                            <span th:text = "${inquiryDto.inqHit}"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="middle">
+                    <textarea th:text="${inquiryDto.inquiryContent}" th:value="${inquiryDto.inquiryContent}" name="inquiryContent" id="contentText" class="writeInput" disabled></textarea>
+                </div>
+                <div class="bottom">
+                    <div class="bottom-top">
+                        <div class="delete">
+<!--                            <th:block sec:authorize="hasAnyRole('ADMIN')">-->
+                            <a th:href="@{/inquiry/delete/{id}(id=${inquiryDto.inqId})}">삭제하기</a>
+                        </div>
+                        <div class="list">
+                            <a th:href="@{/inquiry/list?page=0&select=&search=}" class="list">LIST</a>
+                        </div>
+                    </div>
+                    <div class="bottom-bottom">
+                        <div class="update">
+<!--                            <th:block sec:authorize="hasAnyRole('ADMIN')">-->
+                            <a th:href="@{/inquiry/update/{id}(id=${inquiryDto.inqId})}">수정하기</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!--댓글-->
             <div class="reply-con">
                 <div class="reply-write">
-                    <form action="@{/notice/}">
+                    <form action="@{/inquiry/}">
                         <!-- 번호 -->
                     </form>
                 </div>
