--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -39,7 +39,7 @@
                 <div class="bottom">
                     <div class="bottom-top">
                         <div class="delete">
-                            <!-- <th:block sec:authorize="hasAnyRole('ADMIN')"> -->
+                            <th:block sec:authorize="hasAnyRole('ADMIN')">
                             <a th:href="@{/notice/delete/{id}(id=${noticeDto.notId})}">삭제하기</a>
                         </div>
                         <div class="list">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="bottom-bottom">
                         <div class="update">
-                            <!-- <th:block sec:authorize="hasAnyRole('ADMIN')"> -->
+                            <th:block sec:authorize="hasAnyRole('ADMIN')">
                             <a th:href="@{/notice/update/{id}(id=${noticeDto.notId})}">수정하기</a>
                         </div>
                     </div>
