--- a/src/main/resources/static/css/semiMember/join.css
+++ b/src/main/resources/static/css/semiMember/join.css
@@ -8,13 +8,14 @@
 /* .container >.join */
 .container .join{
     width: 100%;
+    height: 1000px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     box-sizing: border-box;
 }
 .container .join .join-con{
-    flex-basis: 1300px;
+    width: 900px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -29,19 +30,323 @@
     justify-content: center;
     border-bottom: 2px solid #7285d3a4;
 }
+/* join-form */
 .container .join .join-con .join-form{
-    padding: 10px;
+    padding: 30px;
     box-sizing: border-box;
     justify-content: center;
+    align-items: center;
 }
 /* 회원가입  form */
-.container .join .join-con .join-form .form{
+.container .join .join-con .join-form form{
     margin: auto;
     text-align: center;
     width: 700px;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     gap: 5px;
     box-sizing: border-box;
+    align-items: center;
+}
+.container .join .join-con .join-form form>ul{ 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    text-align: center; 
+    align-items: center;
+} 
+.container .join .join-con .join-form form>ul>li:not(.submit){
+    width: 500px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: start; 
+    padding: 10px;
+}
+.container .join .join-con .join-form form>ul>li label{
+    width: 100px;
+    display: flex;
+    justify-content: start;
+    font-size: 18px;
+    padding: 10px;
+} 
+/* li.email */
+.container .join .join-con .join-form form>ul>li.email{
+    /* border: 2px solid blue; */
+}
+/* email > input-group > label */
+.container .join .join-con .join-form form>ul>li.email .input-group label{
+    width: 100px;
+    font-size: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: start;
+} 
+/* email > input-group > inputD */
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD{
+    display: flex;
+    height: inherit;
+    border-bottom: 2px solid #8C9CDB;
+    align-items: center;
+}
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD input{
+    height: 35px;
+    width: 180px;
+    text-align: center;
+    font-size: 18px;
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD select{
+    width: 100px;
+    height: 35px;
+    text-align: center;
+    align-items: center;
+}
+/* email > email-feedback */
+.container .join .join-con .join-form form>ul>li.email .email-feedback{
+    display: flex;
+    justify-content: space-around;
+    padding: 5px 0 0 0;
+    text-align: center;
+    align-items: center;
+    /* border: 2px solid green; */
+}
+/* email > email-feedback > button */
+.container .join .join-con .join-form form>ul>li.email .email-feedback button{
+    width: 150px;
+    height: 20px;
+    display: flex;
+    text-align: center;
+    border-bottom: 1px solid #8C9CDB;
+    /* background: #cccccc; */
+    /* border-radius: 10px; */
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
+.container .join .join-con .join-form form>ul>li.email .email-feedback button:hover{
+    background-color: #cccccc;    
+    /* box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98; */
+    color: ivory;
+}
+/* email > email-feedback > valid-feedback*/
+.container .join .join-con .join-form form>ul>li.email .email-feedback .valid-feedback{
+    font-size: 13px;
+    color: green;
+    text-align: center;
+}
+.container .join .join-con .join-form form>ul>li.email .email-feedback .invalid-feedback{
+    font-size: 13px;
+    color: red;
+    text-align: center;
+}
+
+/* 인증번호 */
+.container .join .join-con .join-form form>ul>li.num{
+    /* border: 2px solid blue; */
+}
+/* num > num-top > label */
+.container .join .join-con .join-form form>ul>li.num .num-top label{
+    width: 100px;
+    font-size: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: start;
+} 
+/* num > num-top > numInput */
+.container .join .join-con .join-form form>ul>li.num .num-top .numInput{
+    display: flex;
+    height: inherit;
+    /* border: 2px solid red; */
+    align-items: center;
+    position: relative;
+}
+/* num > num-top > numInput input*/
+.container .join .join-con .join-form form>ul>li.num .num-top .numInput input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 18px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+    position: relative;
+}
+/* num > num-top > numInput button*/
+.container .join .join-con .join-form form>ul>li.num .num-top .numInput button{
+    width: 100px;
+    height: 35px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 5px;
+    margin: auto 0;
+    display: flex;
+    text-align: center;
+    border-bottom: 1px solid #8C9CDB;
+    box-sizing: border-box;
+    box-shadow: 1px 0px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
+.container .join .join-con .join-form form>ul>li.num .num-top .numInput button:hover{
+    background-color: #cccccc;    
+    color: ivory;
+}
+/* num > num-feedback */
+.container .join .join-con .join-form form>ul>li.num .num-feedback{
+    display: flex;
+    justify-content: space-around;
+    padding: 5px 0 0 0;
+    text-align: center;
+    align-items: center;
+    /* border: 2px solid green; */
+}
+/* num > num-feedback > button */
+.container .join .join-con .join-form form>ul>li.num .num-feedback button{
+    width: 150px;
+    height: 20px;
+    display: flex;
+    text-align: center;
+    border-bottom: 1px solid #8C9CDB;
+    /* border-radius: 10px; */
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
+/* num > num-feedback > valid-feedback*/
+.container .join .join-con .join-form form>ul>li.num .num-feedback .valid-feedback{
+    font-size: 13px;
+    color: green;
+    text-align: center;
+}
+
+/* phone */
+.container .join .join-con .join-form form>ul>li.phone{
+    /* border: 2px solid blue; */
+}
+/* phone > phone-top > label */
+.container .join .join-con .join-form form>ul>li.phone .phone-top label{
+    width: 100px;
+    font-size: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: start;
+} 
+/* phone > phone-top > phoneInput */
+.container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput{
+    display: flex;
+    height: inherit;
+    /* border: 2px solid red; */
+    align-items: center;
+    position: relative;
+}
+/* phone > phone-top > phoneInput input*/
+.container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 18px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+    position: relative;
+}
+/* phone > phone-top > phoneInput button*/
+.container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput button{
+    width: 100px;
+    height: 35px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 5px;
+    margin: auto 0;
+    display: flex;
+    text-align: center;
+    border-bottom: 1px solid #8C9CDB;
+    box-sizing: border-box;
+    box-shadow: 1px 0px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
+.container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput button:hover{
+    background-color: #cccccc;    
+    color: ivory;
+}
+/* phone > phone-feedback */
+.container .join .join-con .join-form form>ul>li.phone .phone-feedback{
+    display: flex;
+    justify-content: space-around;
+    padding: 5px 0 0 0;
+    text-align: center;
+    align-items: center;
+    /* border: 2px solid green; */
+}
+/* phone > phone-feedback > button */
+.container .join .join-con .join-form form>ul>li.phone .phone-feedback button{
+    width: 150px;
+    height: 20px;
+    display: flex;
+    text-align: center;
+    border-bottom: 1px solid #8C9CDB;
+    /* border-radius: 10px; */
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+}
+/* phone > phone-feedback > valid-feedback*/
+.container .join .join-con .join-form form>ul>li.phone .phone-feedback .valid-feedback{
+    font-size: 13px;
+    color: green;
+    text-align: center;
+}
+
+.container .join .join-con .join-form form>ul>li.submit{
+    width: 500px;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+}
+.container .join .join-con .join-form form>ul>li.submit input{
+    width: 480px;
+    height: 50px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    background: #4b66c79e;
+    color: white;
+    outline: none;
+    padding: 15px;
+    gap: 15px;
+    cursor: pointer;
+}
+.container .join .join-con .join-form form>ul>li.submit input:hover{
+    box-sizing: border-box;
+    background: #4b66c7;
+    box-shadow: 0 10px 10px 0 #cccccc;
 }
