--- a/src/main/resources/templates/semiMember/join.html
+++ b/src/main/resources/templates/semiMember/join.html
@@ -23,55 +23,67 @@
             <div class="join-form">
                 <form th:action="@{/semiMember/join}" method="post" id="signupForm" th:object="${semiMemberDto}">
                     <ul>
-                        <li>
+                        <!-- email -->
+                        <li class="email">
                             <div class="input-group">
                                 <label>이메일</label>
-                                <input type="text" id="emailId" name="emailId" required="required" placeholder="이메일 아이디 입력"><span> @ </span>
-                                <input type="text" id="domainCustom" name="domainCustom" placeholder="도메인 직접 입력">
-                                <select id="domainList" required="required">
-                                    <option value="custom">직접 입력</option>
-                                    <option value="gmail.com">gmail.com</option>
-                                    <option value="naver.com">naver.com</option>
-                                    <option value="nate.com">nate.com</option>
-                                    <option value="daum.net">daum.net</option>
-                                </select>
-                                <input type="hidden" id="semiMemberEmail" name="semiMemberEmail" value="">
-                                <button type="button" id="emailCheckButton">이메일 중복 확인</button>
+                                <div class="inputD">
+                                    <input type="text" id="emailId" name="emailId" required="required" placeholder="이메일 아이디 입력"><span> @ </span>
+                                    <input type="text" id="domainCustom" name="domainCustom" placeholder="도메인 직접 입력">
+                                    <select id="domainList" required="required">
+                                        <option value="custom">직접 입력</option>
+                                        <option value="gmail.com">gmail.com</option>
+                                        <option value="naver.com">naver.com</option>
+                                        <option value="nate.com">nate.com</option>
+                                        <option value="daum.net">daum.net</option>
+                                    </select>
+                                    <input type="hidden" id="semiMemberEmail" name="semiMemberEmail" value="">
+                                </div>
                             </div>
-                            <d id="emailAvailable" class="valid-feedback" style="display: none;"></d>
-                            <d id="emailNotAvailable" class="invalid-feedback" style="display: none;"></d>
+                            <div class="email-feedback">
+                                <button type="button" id="emailCheckButton">이메일 중복 확인</button>
+                                <d id="emailAvailable" class="valid-feedback" style="display: none;"></d>
+                                <d id="emailNotAvailable" class="invalid-feedback" style="display: none;"></d>
+                            </div>
                         </li>
-                        <span id="emailIdErrorMessage" style="color: red;"></span> <!-- 이메일 유효성 검사 오류 메시지를 표시할 영역 -->
+                        <span id="emailIdErrorMessage" style="color: red; font-size: 13px;"></span> <!-- 이메일 유효성 검사 오류 메시지를 표시할 영역 -->
+                        
                         <!-- 인증번호 입력란 -->
-                        <li>
-                            <label th:for="emailVerificationCode">인증번호</label>
-                            <input type="text" id="emailVerificationCode" placeholder="인증번호 입력">
-                            <button type="button" id="verifyEmailButton">인증번호 확인</button>
+                        <li class="num">
+                            <div class="num-top">
+                                <label th:for="emailVerificationCode">인증번호</label>
+                                <div class="numInput">
+                                    <input type="text" id="emailVerificationCode" placeholder="인증번호 입력">
+                                    <button type="button" id="certifyEmailButton">인증번호 전송</button>
+                                </div>
+                            </div>
+                            <div class="num-feedback">
+                                <button type="button" id="verifyEmailButton">인증번호 확인</button>
+                                <div id="certifyEmailMessage" class="valid-feedback" style="display: none;"></div>
+                            </div>
                         </li>
-                        <!-- 이메일 인증 버튼 -->
-                        <li>
-                            <button type="button" id="certifyEmailButton">인증번호 전송</button>
-                        </li>
-                        <!-- 인증 결과 메시지 영역 -->
-                        <li>
-                            <div id="certifyEmailMessage" class="valid-feedback" style="display: none;"></div>
-                        </li>
-                        <li>
-                            <label th:for="semiMemberPhone">휴대전화</label>
-                            <input type="text" th:field="*{semiMemberPhone}" required="required" placeholder="- 제외하고 입력해주세요">
+
+                        <!-- 휴대전화 -->
+                        <li class="phone">
+                            <div class="phone-top">
+                                <label th:for="semiMemberPhone">휴대전화</label>
+                                <div class="phoneInput">
+                                    <input type="text" th:field="*{semiMemberPhone}" required="required" placeholder="- 제외하고 입력해주세요">
+                                    <!-- 휴대전화 중복 확인 버튼 -->
+                                </div>
+                            </div>
+                            <div class="phone-feedback">
+                                <button type="button" id="phoneCheckButton">휴대전화 중복 확인</button>
+                                 <!-- 중복 확인 결과 메시지 영역 -->
+                                <d id="phoneAvailable" class="valid-feedback" style="display: none;"></d>
+                                <d id="phoneNotAvailable" class="invalid-feedback" style="display: none;"></d>    
+                            </div>
                         </li>
                         <p th:if="${#fields.hasErrors('semiMemberPhone')}" th:errors="*{semiMemberPhone}" class="error"></p>
-                        <span id="semiMemberPhoneErrorMessage" style="color: red;"></span> <!-- 휴대전화번호 유효성 검사 오류 메시지를 표시할 영역 -->
-                        <!-- 닉네임 중복 확인 버튼 -->
-                        <li>
-                            <button type="button" id="phoneCheckButton">휴대전화 중복 확인</button>
-                        </li>
-                        <!-- 중복 확인 결과 메시지 영역 -->
-                        <li>
-                            <d id="phoneAvailable" class="valid-feedback" style="display: none;"></d>
-                            <d id="phoneNotAvailable" class="invalid-feedback" style="display: none;"></d>
-                        </li>
-                        <li>
+                        <span id="semiMemberPhoneErrorMessage" style="color: red; font-size: 13px"></span> <!-- 휴대전화번호 유효성 검사 오류 메시지를 표시할 영역 -->
+                     
+                        <!-- 회원가입 버튼 -->
+                        <li class="submit">
                             <input type="submit" value="간편 회원가입">
                         </li>
                     </ul>
