--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -13,13 +13,15 @@
       max-width: 100px;
       max-height: 100px;
       border: 1px solid #ccc;
+      border-radius: 50%; /* 50%로 설정하여 원형 모양으로 만듭니다. */
+      overflow: hidden; /* 넘치는 부분은 숨깁니다. */
     }
   </style>
 </head>
 <body>
 <div class="detail">
   <h1 class="title"><span th:text="${member.memberNickName}" ></span>님 상세정보</h1>
-<!--  &lt;!&ndash; 이미지 미리보기 영역 &ndash;&gt;-->
+  <!-- 이미지 미리보기 영역 -->
   <div id="image-preview"><img id="preview-image" th:src="${memberImageUrl}" alt="프로필 이미지" style="width: 100px; height: 100px;"></div>
   <button onclick="redirectToURL()">프로필 이미지 수정</button>
   <span th:if="${false}" th:text="${member.memberId}"></span> <br> <!-- th:if="${false}" 입력 시 안보이게 처리 -->
