--- a/src/main/resources/templates/member/updateImage.html
+++ b/src/main/resources/templates/member/updateImage.html
@@ -15,8 +15,10 @@
       max-width: 100px;
       max-height: 100px;
       border: 1px solid #ccc;
+      border-radius: 50%; /* 50%로 설정하여 원형 모양으로 만듭니다. */
+      overflow: hidden; /* 넘치는 부분은 숨깁니다. */
     }
-  </style>
+</style>
 <div class="detail">
     <h1 class="title"><span th:text="${member.memberNickName}" ></span>님 상세정보</h1>
     <!-- 이미지 미리보기 영역 -->
