연관관계 수정 완료

--- a/src/main/resources/templates/semiMember/confirmEmail.html
+++ b/src/main/resources/templates/semiMember/confirmEmail.html
@@ -8,7 +8,7 @@
     <script th:src="@{/js/member/semiConfirmEmail.js/}" defer="defer"></script>
 </head>
 <body>
-<div th:replace="~{fragments/header :: headerFragment}"></div>
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <h1>이메일 인증</h1>
 <form th:action="@{/semiMember/delete/{semiMemberId}(semiMemberId=${semiMemberId})}" id="confirmEmailForm">
     <ul>
