회원가입 디자인

--- a/src/main/resources/static/css/member/join.css
+++ b/src/main/resources/static/css/member/join.css
@@ -36,8 +36,8 @@
     padding: 10px;
     box-sizing: border-box;
     justify-content: center;
-    border: 2px solid #FFF2F2;
-    box-shadow: 0px 1px 1px 0px #f9e3e3, inset 0px -2px 4px -1px #FFF2F2;
+    /* border: 2px solid #FFF2F2;
+    box-shadow: 0px 1px 1px 0px #f9e3e3, inset 0px -2px 4px -1px #FFF2F2; */
     /* box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98; */
 }
 .container .join .join-con .join-form form{
@@ -83,28 +83,32 @@
     /* width: inherit; */
     display: flex;
     text-align: center;
-    border-bottom: 1px solid #8C9CDB;
-    border-radius: 10px;
+    border-radius: 5px;
     box-sizing: border-box;
-    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
     align-items: center;
     justify-content: center;
     transition: all 0.3s;
+    border: 2px solid #c5c5c5;
+    cursor: pointer;
 }
 .container .join .join-con .join-form form>ul>li button:hover{
-    background-color: #DADFF3;
-    color: ivory;
+    background-color: #c5c5c5;
+    color: white;
 }
 /* label 넓이 고정 */
 .container .join .join-con .join-form form>ul>li label{
     width: 100px;
+    font-weight: bold;
 }
 /* 입력 받는 input */
 .container .join .join-con .join-form form>ul>li .box{
     width: 800px; 
     height: 30px; 
     padding: 10px;
-    border: 2px solid #DADFF3;
+    border-bottom: 2px solid #DADFF3;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     /* border-radius: 10px;
     border-right: none; */
     /* border: none; */
@@ -133,7 +137,10 @@
     width: 250px; 
     height: 30px; 
     padding: 10px;
-    border: 2px solid #DADFF3;
+    border-bottom: 2px solid #DADFF3;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     /* border-radius: 10px;
     border-right: none; */
     /* border: none; */
@@ -145,7 +152,10 @@
     height: 30px; 
     padding: 10px;
     /* gap: 10px; */
-    border: 2px solid #DADFF3;
+    border-bottom: 2px solid #DADFF3;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     /* box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98; */
 }
 .container .join .join-con .join-form form>ul>li .email label{
@@ -155,7 +165,6 @@
     width: 130px;
     height: 30px;
     text-align: center;
-
 }
 .container .join .join-con .join-form form>ul>li .email button{
     position: absolute;
@@ -227,8 +236,8 @@
     position: relative;
 }
 .container .join .join-con .join-form form>ul>li .phone button{
+    width: 110px;
     position: absolute;
-    width: 100px;
     height: 30px;
     top: 0;
     bottom: 0;
@@ -237,6 +246,61 @@
     border-radius: 3px;
     cursor: pointer;
 }
+
+/* 생년월일 */
+.container .join .join-con .join-form form>ul>li .birth-select{
+    width: 800px; 
+    height: 30px; 
+    padding: 10px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    align-items: center;
+}
+.container .join .join-con .join-form form>ul>li .birth-select select{
+    width: 130px;
+    height: 30px;
+    text-align: center;
+}
+
+/* 주소 */
+.container .join .join-con .join-form form>ul .form-group{
+    width: inherit;
+    display: flex;
+    /* justify-content: center; */
+    margin-bottom: 15px;
+    text-align: center;
+    align-items: center;
+    /* gap: 5px; */
+}
+.container .join .join-con .join-form form>ul .form-group label{
+    width: 100px;
+    font-weight: bold;
+}
+.container .join .join-con .join-form form>ul .form-group input{
+    width: 800px; 
+    height: 30px; 
+    padding: 10px;
+    border-bottom: 2px solid #DADFF3;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+.container .join .join-con .join-form form>ul .form-group button{
+    border: 2px solid #c5c5c5;
+    width: 100px;
+    height: 30px;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.container .join .join-con .join-form form>ul .form-group button:hover{
+    background-color: #c5c5c5;
+    color: white;
+}
+
 /* 회원가입 버튼 */
 .container .join .join-con .join-form form>ul>li.submitLi{
     width: 1000px;
@@ -244,15 +308,13 @@
     justify-content: end;
 }
 .container .join .join-con .join-form form>ul>li.submitLi .joinBtn{
-    width: 100px;
     height: 50px;
     display: flex;
     align-items: center;
 }
 .container .join .join-con .join-form form>ul>li.submitLi .joinBtn input{
-    width: 200px;
-    height: 30px;
-    /* border-radius: 10px; */
+    width: 300px;
+    height: 40px;
     text-align: center;
     box-sizing: border-box;
     box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
