--- a/src/main/resources/static/css/semiMember/join.css
+++ b/src/main/resources/static/css/semiMember/join.css
@@ -28,7 +28,6 @@
     box-sizing: border-box;
     display: flex;
     justify-content: center;
-    border-bottom: 2px solid #7285d3a4;
 }
 /* join-form */
 .container .join .join-con .join-form{
@@ -85,12 +84,21 @@
 } 
 /* email > input-group > inputD */
 .container .join .join-con .join-form form>ul>li.email .input-group .inputD{
-    display: flex;
+    display: inline-flex;
     height: inherit;
-    border-bottom: 2px solid #8C9CDB;
     align-items: center;
+    gap: 10px;
 }
-.container .join .join-con .join-form form>ul>li.email .input-group .inputD input{
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD .inputColor{
+    width: 500px;
+    border-bottom: 2px solid #8C9CDB;
+    display: flex;
+    justify-content: space-around;
+    height: inherit;
+    align-items: center;
+    gap: 10px;
+}
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD .inputColor input{
     height: 35px;
     width: 180px;
     text-align: center;
@@ -106,11 +114,28 @@
     text-align: center;
     align-items: center;
 }
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD button{
+    width: 100px;
+    height: 35px;
+    margin: auto 0;
+    display: flex;
+    text-align: center;
+    border: 1px solid #8C9CDB;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD button:hover{
+    background-color: #c5c5c5;
+    color: white;
+}
 /* email > email-feedback */
 .container .join .join-con .join-form form>ul>li.email .email-feedback{
     display: flex;
-    justify-content: space-around;
-    padding: 5px 0 0 0;
+    justify-content: center;
+    padding: 15px 0 0 0;
     text-align: center;
     align-items: center;
     /* border: 2px solid green; */
@@ -121,19 +146,16 @@
     height: 20px;
     display: flex;
     text-align: center;
-    border-bottom: 1px solid #8C9CDB;
-    /* background: #cccccc; */
-    /* border-radius: 10px; */
+    border: 2px solid #c5c5c5;
     box-sizing: border-box;
-    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
     align-items: center;
     justify-content: center;
     transition: all 0.3s;
+    cursor: pointer;
 }
 .container .join .join-con .join-form form>ul>li.email .email-feedback button:hover{
-    background-color: #cccccc;    
-    /* box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98; */
-    color: ivory;
+    background-color: #c5c5c5;
+    color: white;
 }
 /* email > email-feedback > valid-feedback*/
 .container .join .join-con .join-form form>ul>li.email .email-feedback .valid-feedback{
@@ -161,11 +183,11 @@
 } 
 /* num > num-top > numInput */
 .container .join .join-con .join-form form>ul>li.num .num-top .numInput{
-    display: flex;
+    display: inline-flex;
     height: inherit;
-    /* border: 2px solid red; */
     align-items: center;
     position: relative;
+    gap: 10px;
 }
 /* num > num-top > numInput input*/
 .container .join .join-con .join-form form>ul>li.num .num-top .numInput input{
@@ -177,40 +199,34 @@
     border-top: none;
     border-left: none;
     border-right: none;
-
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
     align-items: center;
-    position: relative;
 }
 /* num > num-top > numInput button*/
 .container .join .join-con .join-form form>ul>li.num .num-top .numInput button{
     width: 100px;
     height: 35px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 5px;
     margin: auto 0;
     display: flex;
     text-align: center;
-    border-bottom: 1px solid #8C9CDB;
+    border: 1px solid #8C9CDB;
     box-sizing: border-box;
-    box-shadow: 1px 0px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
     align-items: center;
     justify-content: center;
     transition: all 0.3s;
+    cursor: pointer;
 }
 .container .join .join-con .join-form form>ul>li.num .num-top .numInput button:hover{
-    background-color: #cccccc;    
-    color: ivory;
+    background-color: #c5c5c5;
+    color: white;
 }
 /* num > num-feedback */
 .container .join .join-con .join-form form>ul>li.num .num-feedback{
     display: flex;
-    justify-content: space-around;
-    padding: 5px 0 0 0;
+    justify-content: center;
+    padding: 15px 0 0 0;
     text-align: center;
     align-items: center;
     /* border: 2px solid green; */
@@ -221,13 +237,16 @@
     height: 20px;
     display: flex;
     text-align: center;
-    border-bottom: 1px solid #8C9CDB;
-    /* border-radius: 10px; */
+    border: 2px solid #c5c5c5;
     box-sizing: border-box;
-    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
     align-items: center;
     justify-content: center;
     transition: all 0.3s;
+    cursor: pointer;
+}
+.container .join .join-con .join-form form>ul>li.num .num-feedback button:hover{
+    background-color: #c5c5c5;
+    color: white;
 }
 /* num > num-feedback > valid-feedback*/
 .container .join .join-con .join-form form>ul>li.num .num-feedback .valid-feedback{
@@ -250,11 +269,11 @@
 } 
 /* phone > phone-top > phoneInput */
 .container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput{
-    display: flex;
+    display: inline-flex;
     height: inherit;
-    /* border: 2px solid red; */
     align-items: center;
     position: relative;
+    gap: 10px;
 }
 /* phone > phone-top > phoneInput input*/
 .container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput input{
@@ -266,7 +285,6 @@
     border-top: none;
     border-left: none;
     border-right: none;
-
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
@@ -275,48 +293,30 @@
 }
 /* phone > phone-top > phoneInput button*/
 .container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput button{
-    width: 100px;
+    width: 120px;
     height: 35px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 5px;
     margin: auto 0;
     display: flex;
     text-align: center;
-    border-bottom: 1px solid #8C9CDB;
+    border: 1px solid #8C9CDB;
     box-sizing: border-box;
-    box-shadow: 1px 0px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
     align-items: center;
     justify-content: center;
     transition: all 0.3s;
+    cursor: pointer;
 }
 .container .join .join-con .join-form form>ul>li.phone .phone-top .phoneInput button:hover{
-    background-color: #cccccc;    
-    color: ivory;
+    background-color: #c5c5c5;
+    color: white;
 }
 /* phone > phone-feedback */
 .container .join .join-con .join-form form>ul>li.phone .phone-feedback{
     display: flex;
-    justify-content: space-around;
-    padding: 5px 0 0 0;
+    justify-content: center;
+    padding: 15px 0 0 0;
     text-align: center;
     align-items: center;
     /* border: 2px solid green; */
-}
-/* phone > phone-feedback > button */
-.container .join .join-con .join-form form>ul>li.phone .phone-feedback button{
-    width: 150px;
-    height: 20px;
-    display: flex;
-    text-align: center;
-    border-bottom: 1px solid #8C9CDB;
-    /* border-radius: 10px; */
-    box-sizing: border-box;
-    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s;
 }
 /* phone > phone-feedback > valid-feedback*/
 .container .join .join-con .join-form form>ul>li.phone .phone-feedback .valid-feedback{
