member confitmEmail,confirmPassword 디자인

--- a/src/main/resources/templates/member/confirmPassword.html
+++ b/src/main/resources/templates/member/confirmPassword.html
@@ -9,21 +9,37 @@
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
-<h1>비밀번호 확인</h1>
-<form th:action="@{/member/confirmPassword}" method="post">
-    <ul>
-        <li>
-            <input type="hidden" name="memberId" id="memberId" th:value="${memberId}">
-        </li>
-        <li>
-            <label th:for="currentPassword">비밀번호</label>
-            <input type="password" name="currentPassword" id="currentPassword" placeholder="비밀번호를 입력해주세요" required="required"> <br>
-            <button type="button" id="checkCurrentPasswordBtn">비밀번호 확인</button>
-            <div id="currentPasswordMessage" style="color: red;"></div>
-        </li>
-    </ul>
-    <button type="submit" id="changePasswordBtn">비밀번호 변경</button>
-</form>
+<div class="container">
+    <div class="confirm">
+        <div class="confirm-con">
+            <div class="title">
+                <h1>비밀번호 확인</h1>
+            </div>
+            <div class="confirm-form">
+                <form th:action="@{/member/confirmPassword}" method="post">
+                    <ul>
+                        <li class="password">
+                            <input type="hidden" name="memberId" id="memberId" th:value="${memberId}">
+                            <div class="password-group">
+                                <label th:for="currentPassword">비밀번호</label>
+                                <div class="writeP">
+                                    <input type="password" name="currentPassword" id="currentPassword" placeholder="비밀번호를 입력해주세요" required="required"> <br>
+                                    <button type="button" id="checkCurrentPasswordBtn">비밀번호 확인</button>
+                                </div>
+                            </div>
+                            <div class="password-feedback">
+                                <div id="currentPasswordMessage" style="color: red;"></div>
+                            </div>
+                        </li>
+                        <li class="change">
+                            <button type="submit" id="changePasswordBtn">비밀번호 변경</button>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
