--- a/src/main/resources/templates/semiMember/join.html
+++ b/src/main/resources/templates/semiMember/join.html
@@ -28,7 +28,7 @@
                             <div class="input-group">
                                 <label>이메일</label>
                                 <div class="inputD">
-                                    <div class="inputColor">
+                                    <div class="inputEmail">
                                         <input type="text" id="emailId" name="emailId" required="required" placeholder="이메일 아이디 입력"><span> @ </span>
                                         <input type="text" id="domainCustom" name="domainCustom" placeholder="도메인 직접 입력">
                                     </div>
