--- a/src/main/resources/static/css/member/confirmPassword.css
+++ b/src/main/resources/static/css/member/confirmPassword.css
@@ -1,3 +1,151 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+/* .container */
+.container{
+    width: 100%;
+}
+/* .container > confirm */
+.container .confirm{
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+.container .confirm .confirm-con{
+    width: 900px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+/* title */
+.container .confirm .confirm-con .title{
+    padding: 30px;
+    gap: 10px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+}
+/* delete form */
+.container .confirm .confirm-con .confirm-form{
+    padding: 45px;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+}
+/* form */
+.container .confirm .confirm-con .confirm-form form{
+    margin: auto;
+    text-align: center;
+    width: 700px;
+    /* border: 2px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    box-sizing: border-box;
+    align-items: center;
+}
+.container .confirm .confirm-con .confirm-form form>ul{ 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    text-align: center; 
+    align-items: center;
+} 
+.container .confirm .confirm-con .confirm-form form>ul>li.password{
+    /* border: 2px solid blue; */
+}
+/* num > num-group > label */
+.container .confirm .confirm-con .confirm-form form>ul>li.password .password-group label{
+    width: 100px;
+    font-size: 25px;
+    padding: 10px;
+    display: flex;
+    justify-content: start;
+} 
+/* num > num-top > numInput */
+.container .confirm .confirm-con .confirm-form form>ul>li.password .password-group .writeP{
+    display: inline-flex;
+    height: inherit;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+}
+/* num > num-top > numInput input*/
+.container .confirm .confirm-con .confirm-form form>ul>li.password .password-group .writeP input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+}
+/* num > num-top > numInput button*/
+.container .confirm .confirm-con .confirm-form form>ul>li.password .password-group .writeP button{
+    width: 130px;
+    height: 35px;
+    font-size: 18px;
+    margin: auto 0;
+    display: flex;
+    text-align: center;
+    border: 1px solid #8C9CDB;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+.container .confirm .confirm-con .confirm-form form>ul>li.password .password-group .writeP button:hover{
+    background-color: #c5c5c5;
+    color: white;
+}
+/* num > num-feedback */
+.container .confirm .confirm-con .confirm-form form>ul>li.password .password-feedback{
+    display: flex;
+    justify-content: center;
+    padding: 15px 0 0 0;
+    text-align: center;
+    align-items: center;
+}
+/* num > num-feedback > valid-feedback*/
+.container .confirm .confirm-con .confirm-form form>ul>li.password .password-feedback .currentPasswordMessage{
+    font-size: 20px;
+    color: green;
+    text-align: center;
+}
+/* delete button */
+.container .confirm .confirm-con .confirm-form form>ul>li.change{
+    width: 500px;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+}
+.container .confirm .confirm-con .confirm-form form>ul>li.change button{
+    width: 480px;
+    height: 50px;
+    text-align: center;
+    font-size: 23px;
+    border-radius: 10px;
+    border: none;
+    background: #4b66c79e;
+    color: white;
+    outline: none;
+    padding: 15px;
+    gap: 15px;
+    cursor: pointer;
+}
+.container .confirm .confirm-con .confirm-form form>ul>li.change button:hover{
+    box-sizing: border-box;
+    background: #4b66c7;
+    box-shadow: 0 10px 10px 0 #cccccc;
+}
