--- a/src/main/resources/static/css/notice/detail.css
+++ b/src/main/resources/static/css/notice/detail.css
@@ -24,11 +24,11 @@
     align-items: center;
     gap: 10px;
 }
+/* title */
 .container .detail .detail-con .title{
     width: 1000px;
     border-bottom: 4px solid #7285d3;
     text-align: start;
-    /* font-size: 25px; */
     padding: 5px;
 }
 .container .detail .detail-con .board-con{
@@ -37,28 +37,28 @@
     align-items: center;
     flex-direction: column;
     gap: 10px;
-    /* border: 2px solid red; */
 }
 .container .detail .detail-con .board-con .top{
     display: flex;
     flex-direction: column;
-    /* border: 2px solid yellow; */
 }
 .container .detail .detail-con .board-con .top .top-title{
-    /* width: 900px; */
     border-bottom: 2px solid #7285d3a4;
     display: flex;
     justify-content: start;
     padding: 10px 0 20px 0;
     gap: 10px;
 }
+/* title */
 .container .detail .detail-con .board-con .top .top-title span.titleSpan{
     font-weight: bold;
 }
+/* type */
 .container .detail .detail-con .board-con .top .top-title span.typeSpan{
     padding: 0 10px;
     border-right: 1px solid #cccccc;
 }
+/* top-bottom */
 .container .detail .detail-con .board-con .top .top-bottom{
     width: 900px;
     border-bottom: 2px solid #7285d3a4;
@@ -66,18 +66,21 @@
     justify-content: space-between;
     padding: 10px;
 }
+/* left */
 .container .detail .detail-con .board-con .top .top-bottom .left{
-    font-size: 12px;
+    font-size: 14px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+/* riight */
 .container .detail .detail-con .board-con .top .top-bottom .right{
-    font-size: 12px;
+    font-size: 14px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+/* content */
 .container .detail .detail-con .board-con .middle{
     display: flex;
     justify-content: start;
@@ -87,16 +90,11 @@
     width: 900px;
     height: 300px;
     padding: 10px;
-    /* box-shadow: inset 0px -2px 4px -1px #8c9cdb; */
-    /* border: 1px solid #8c9cdb; */
     resize: none;
     background: transparent;
     outline: none;
-    /* border-bottom: 2px solid #7285d3a4;
-    border-top: none;
-    border-left: none;
-    border-right: none; */
 }
+/* botttom -> delete, update, list */
 .container .detail .detail-con .board-con .bottom{
     display: flex;
     flex-direction: column;
@@ -112,7 +110,6 @@
 }
 /* delete의 a */
 .container .detail .detail-con .board-con .bottom .bottom-top .delete{
-    /* height: 30px; */
     align-items: center;
     text-align: center;
     display: flex;
@@ -137,7 +134,6 @@
 }
 /* list목록으로 가는 a */
 .container .detail .detail-con .board-con .bottom .bottom-top .list{
-    /* height: 30px; */
     align-items: center;
     text-align: center;
     display: flex;
@@ -169,7 +165,6 @@
     padding: 10px;
 }
 .container .detail .detail-con .board-con .bottom .bottom-bottom .update{
-    /* height: 30px; */
     align-items: center;
     text-align: center;
     display: flex;
