--- a/src/main/resources/static/css/semiMember/join.css
+++ b/src/main/resources/static/css/semiMember/join.css
@@ -89,7 +89,7 @@
     align-items: center;
     gap: 10px;
 }
-.container .join .join-con .join-form form>ul>li.email .input-group .inputD .inputColor{
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD .inputEmail{
     width: 500px;
     border-bottom: 2px solid #8C9CDB;
     display: flex;
@@ -98,7 +98,7 @@
     align-items: center;
     gap: 10px;
 }
-.container .join .join-con .join-form form>ul>li.email .input-group .inputD .inputColor input{
+.container .join .join-con .join-form form>ul>li.email .input-group .inputD .inputEmail input{
     height: 35px;
     width: 180px;
     text-align: center;
@@ -159,12 +159,12 @@
 }
 /* email > email-feedback > valid-feedback*/
 .container .join .join-con .join-form form>ul>li.email .email-feedback .valid-feedback{
-    font-size: 13px;
+    font-size: 14px;
     color: green;
     text-align: center;
 }
 .container .join .join-con .join-form form>ul>li.email .email-feedback .invalid-feedback{
-    font-size: 13px;
+    font-size: 14px;
     color: red;
     text-align: center;
 }
@@ -231,26 +231,9 @@
     align-items: center;
     /* border: 2px solid green; */
 }
-/* num > num-feedback > button */
-.container .join .join-con .join-form form>ul>li.num .num-feedback button{
-    width: 150px;
-    height: 20px;
-    display: flex;
-    text-align: center;
-    border: 2px solid #c5c5c5;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s;
-    cursor: pointer;
-}
-.container .join .join-con .join-form form>ul>li.num .num-feedback button:hover{
-    background-color: #c5c5c5;
-    color: white;
-}
 /* num > num-feedback > valid-feedback*/
 .container .join .join-con .join-form form>ul>li.num .num-feedback .valid-feedback{
-    font-size: 13px;
+    font-size: 14px;
     color: green;
     text-align: center;
 }
@@ -320,11 +303,11 @@
 }
 /* phone > phone-feedback > valid-feedback*/
 .container .join .join-con .join-form form>ul>li.phone .phone-feedback .valid-feedback{
-    font-size: 13px;
+    font-size: 14px;
     color: green;
     text-align: center;
 }
-
+/* submit button */
 .container .join .join-con .join-form form>ul>li.submit{
     width: 500px;
     padding: 15px;
