--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -8,9 +8,12 @@
             <div class="top-menu">
                 <ul>
                     <li><a th:href="@{/notice/list(page=0 ,search=${param.search} ,select=${param.select})}">공지사항</a></li>
-                    <th:block sec:authorize="isAuthenticated()">
-                        <li><a th:href="@{/inquiry/list}">문의하기</a></li>
+                    <th:block sec:authorize="hasAnyRole('ADMIN', 'MEMBER', 'SEMIMEMBER', 'SELLER')">
+                        <li><a th:href="@{/inquiry/list(page=0 ,search=${param.search} ,select=${param.select})}">문의사항</a></li>
                     </th:block>
+<!--                    <th:block sec:authorize="hasAnyRole('MEMBER, 'SEMIMEMBER')">-->
+<!--                        <li><a th:href="@{inquiry/write/{memberId}(memberId=${#authentication.principal.memberEntity.memberId})}">문의하기</a></li>-->
+<!--                    </th:block>-->
                     <th:block sec:authorize="isAnonymous()">
                         <li><a th:href="@{/login}">로그인</a></li>
                         <li><a th:href="@{/join}">회원가입</a></li>
