--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -27,13 +27,16 @@
   <span th:if="${false}" th:text="${member.memberId}"></span> <br> <!-- th:if="${false}" 입력 시 안보이게 처리 -->
   <span th:if="${false}" :text="${member.memberPassword}"></span> <br>
   이메일 : <span th:text="${member.memberEmail}"></span> <br>
-  이름 : <span th:text="${member.memberName}"></span> <br>
-  닉네임 : <span th:text="${member.memberNickName}"></span> <br>
-  휴대전화 : <span th:text="${member.memberPhone}"></span> <br>
-  생년월일 : <span th:text="${member.memberBirth}" id="memberBirthSpan"></span>
+  이름 : <span th:text="${member.memberName}" th:class="${member.memberName == null or member.memberName == '' ? 'error' : ''}"></span>
+  <span th:if="${member.memberName == null or member.memberName == ''}" style="color: red;">이름을 입력해주세요</span> <br>
+  닉네임 : <span th:text="${member.memberNickName}" th:class="${member.memberNickName == null or member.memberNickName == '' ? 'error' : ''}"></span>
+  <span th:if="${member.memberNickName == null or member.memberNickName == ''}" style="color: red;">닉네임을 입력해주세요</span> <br>
+  휴대전화번호 : <span th:text="${member.memberPhone}" th:class="${member.memberPhone == null or member.memberPhone == '' or member.memberPhone.length() >= 12 ? 'error' : ''}"></span>
+  <span th:if="${member.memberPhone.length() >= 12}" style="color: red;">올바른 휴대전화번호를 입력해주세요</span> <br>
+  생년월일 : <span th:text="${member.memberBirth}" id="memberBirthSpan" th:class="${member.memberBirth == null or member.memberBirth == '' ? 'error' : ''}"></span>
+  <span th:if="${member.memberBirth == null or member.memberBirth == ''}" style="color: red;">생년월일을 입력해주세요</span>
   <!-- 오류 메시지를 표시할 영역 -->
   <span id="birthErrorMessage" style="color: red;"></span> <br>
-<!--  주소 : <span th:text="${member.memberStreetAddress + ', ' + member.memberDetailAddress}"></span> <br>-->
   주소 : <span th:text="${member.memberStreetAddress + ', ' + member.memberDetailAddress}" th:class="${member.memberStreetAddress == null ? 'error' : ''}"></span>
   <span th:if="${member.memberStreetAddress == null}" style="color: red;">주소를 입력해주세요</span> <br>
   권한 : <span th:text="${member.role}"></span> <br>
