--- a/src/main/resources/static/css/member/confirmPassword.css
+++ b/src/main/resources/static/css/member/confirmPassword.css
@@ -41,7 +41,7 @@
     margin: auto;
     text-align: center;
     width: 700px;
-    /* border: 2px solid yellow; */
+    padding: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,25 +49,32 @@
     box-sizing: border-box;
     align-items: center;
 }
-.container .confirm .confirm-con .confirm-form form>ul{ 
-    display: flex; 
-    flex-direction: column; 
-    justify-content: center; 
-    text-align: center; 
+.container .confirm .confirm-con .confirm-form form>ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     align-items: center;
-} 
+}
+.container .confirm .confirm-con .confirm-form form>ul>li:not(.change){
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+/* password */
 .container .confirm .confirm-con .confirm-form form>ul>li.password{
     /* border: 2px solid blue; */
 }
-/* num > num-group > label */
+/* password > password-group > label */
 .container .confirm .confirm-con .confirm-form form>ul>li.password .password-group label{
     width: 100px;
     font-size: 25px;
     padding: 10px;
     display: flex;
     justify-content: start;
-} 
-/* num > num-top > numInput */
+}
+/* password > password-top > writeP */
 .container .confirm .confirm-con .confirm-form form>ul>li.password .password-group .writeP{
     display: inline-flex;
     height: inherit;
@@ -75,7 +82,7 @@
     position: relative;
     gap: 10px;
 }
-/* num > num-top > numInput input*/
+/* password > password-top > writeP input*/
 .container .confirm .confirm-con .confirm-form form>ul>li.password .password-group .writeP input{
     height: 35px;
     width: 500px;
@@ -90,7 +97,7 @@
     box-sizing: border-box;
     align-items: center;
 }
-/* num > num-top > numInput button*/
+/* password-group > writeP button*/
 .container .confirm .confirm-con .confirm-form form>ul>li.password .password-group .writeP button{
     width: 130px;
     height: 35px;
@@ -109,7 +116,7 @@
     background-color: #c5c5c5;
     color: white;
 }
-/* num > num-feedback */
+/* password > password-feedback */
 .container .confirm .confirm-con .confirm-form form>ul>li.password .password-feedback{
     display: flex;
     justify-content: center;
@@ -117,13 +124,13 @@
     text-align: center;
     align-items: center;
 }
-/* num > num-feedback > valid-feedback*/
+/* password > password-feedback > currentPasswordMessage*/
 .container .confirm .confirm-con .confirm-form form>ul>li.password .password-feedback .currentPasswordMessage{
     font-size: 20px;
     color: green;
     text-align: center;
 }
-/* delete button */
+/* change button */
 .container .confirm .confirm-con .confirm-form form>ul>li.change{
     width: 500px;
     padding: 15px;
