--- a/src/main/resources/templates/member/confirmPassword.html
+++ b/src/main/resources/templates/member/confirmPassword.html
@@ -23,7 +23,7 @@
                             <div class="password-group">
                                 <label th:for="currentPassword">비밀번호</label>
                                 <div class="writeP">
-                                    <input type="password" name="currentPassword" id="currentPassword" placeholder="비밀번호를 입력해주세요" required="required"> <br>
+                                    <input type="password" name="currentPassword" id="currentPassword" placeholder="비밀번호를 입력해주세요" required="required">
                                     <button type="button" id="checkCurrentPasswordBtn">비밀번호 확인</button>
                                 </div>
                             </div>
