--- a/src/main/resources/static/css/member/changePassword.css
+++ b/src/main/resources/static/css/member/changePassword.css
@@ -1,3 +1,241 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+/* .container */
+.container{
+    width: 100%;
+}
+/* .container > change */
+.container .change{
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+.container .change .change-con{
+    width: 900px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+/* title */
+.container .change .change-con .title{
+    padding: 30px;
+    gap: 10px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+}
+/* delete form */
+.container .change .change-con .change-form{
+    padding: 45px;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+}
+/* form */
+.container .change .change-con .change-form form{
+    margin: auto;
+    text-align: center;
+    width: 700px;
+    /* border: 2px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    box-sizing: border-box;
+    align-items: center;
+}
+.container .change .change-con .change-form form>ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+.container .change .change-con .change-form form>ul>li:not(.changeBtn){
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding: 10px;
+}
+.container .change .change-con .change-form form>ul>li.current{
+    padding: 0 0 15px 0;
+}
+/* password > password-group > label */
+.container .change .change-con .change-form form>ul>li.current .current-group label{
+    width: inherit;
+    font-size: 25px;
+    padding: 20px;
+    display: flex;
+    justify-content: start;
+}
+/* password > password-top > writeP */
+.container .change .change-con .change-form form>ul>li.current .current-group .writeC{
+    display: inline-flex;
+    height: inherit;
+    align-items: center;
+    gap: 10px;
+    position: relative;
+}
+/* password > password-top > writeP input*/
+.container .change .change-con .change-form form>ul>li.current .current-group .writeC input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+    position: relative;
+}
+/* password-group > writeP button*/
+.container .change .change-con .change-form form>ul>li.current .current-group .writeC button{
+    width: 180px;
+    height: 35px;
+    font-size: 18px;
+    padding: 10px;
+    margin: auto 0;
+    display: flex;
+    text-align: center;
+    border: 1px solid #8C9CDB;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+.container .change .change-con .change-form form>ul>li.current .current-group .writeC button:hover{
+    background-color: #c5c5c5;
+    color: white;
+}
+/* current > current-check */
+.container .confirm .confirm-con .confirm-form form>ul>li.currnet .currnet-check{
+    display: flex;
+    justify-content: center;
+    padding: 15px 0 0 0;
+    text-align: center;
+    align-items: center;
+}
+/* current > curent-ceck > currentPasswordMessage*/
+.container .confirm .confirm-con .confirm-form form>ul>li.currnet .currnet-check .currentPasswordMessage{
+    font-size: 20px;
+    color: green;
+    text-align: center;
+}
+/* newPassword */
+.container .change .change-con .change-form form>ul>li.new{
+    padding: 0 0 15px 0;
+}
+/* new > new-group > label */
+.container .change .change-con .change-form form>ul>li.new .new-group label{
+    width: inherit;
+    font-size: 25px;
+    padding: 20px;
+    display: flex;
+    justify-content: start;
+}
+/* new > new-top > writeN */
+.container .change .change-con .change-form form>ul>li.new .new-group .writeN{
+    width: 670px;
+    display: inline-flex;
+    height: inherit;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+}
+/* new > new-top > writeN input*/
+.container .change .change-con .change-form form>ul>li.new .new-group .writeN input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+}
+/* newPassword check */
+.container .change .change-con .change-form form>ul>li.newCheck{
+    padding: 0 0 15px 0;
+}
+/* new > new-group > label */
+.container .change .change-con .change-form form>ul>li.newCheck .newC-group label{
+    width: inherit;
+    font-size: 25px;
+    padding: 20px;
+    display: flex;
+    justify-content: start;
+}
+/* new > new-top > writeN */
+.container .change .change-con .change-form form>ul>li.newCheck .newC-group .writeNC{
+    width: 670px;
+    display: inline-flex;
+    height: inherit;
+    align-items: center;
+    position: relative;
+    gap: 10px;
+}
+/* new > new-top > writeN input*/
+.container .change .change-con .change-form form>ul>li.newCheck .newC-group .writeNC input{
+    height: 35px;
+    width: 500px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #8C9CDB;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    align-items: center;
+}
+/* newCheck > message */
+.container .change .change-con .change-form form>ul>li.newCheck .message{
+    display: flex;
+    justify-content: center;
+    padding: 15px 0 0 0;
+    text-align: center;
+    align-items: center;
+    font-size: 20px;
+}
+/* change button */
+.container .change .change-con .change-form form>ul>li.changeBtn{
+    width: 500px;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+}
+.container .change .change-con .change-form form>ul>li.changeBtn button{
+    width: 480px;
+    height: 50px;
+    text-align: center;
+    font-size: 23px;
+    border-radius: 10px;
+    border: none;
+    background: #4b66c79e;
+    color: white;
+    outline: none;
+    padding: 15px;
+    gap: 15px;
+    cursor: pointer;
+}
+.container .change .change-con .change-form form>ul>li.changeBtn button:hover{
+    box-sizing: border-box;
+    background: #4b66c7;
+    box-shadow: 0 10px 10px 0 #cccccc;
+}
