--- a/src/main/resources/templates/member/changePassword.html
+++ b/src/main/resources/templates/member/changePassword.html
@@ -9,31 +9,56 @@
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
-<div class="password-change">
-    <h1>비밀번호 변경</h1>
-    <form id="changePasswordForm" th:action="@{/member/changePassword}" method="post">
-        <ul>
-            <li>
-                <input type="hidden" name="memberId" id="memberId" th:value="${memberId}">
-            </li>
-            <li>
-                <label th:for="currentPassword">현재 비밀번호</label>
-                <input type="password" name="currentPassword" id="currentPassword" placeholder="현재 비밀번호" required="required"> <br>
-                <button type="button" id="checkCurrentPasswordBtn">현재 비밀번호 확인</button>
-                <div id="currentPasswordMessage" style="color: red;"></div>
-            </li>
-            <li>
-                <label th:for="newPassword">신규 비밀번호</label>
-                <input type="password" name="newPassword" id="newPassword" placeholder="신규 비밀번호" required="required"> <br>
-            </li>
-            <li>
-                <label th:for="confirmNewPassword">신규 비밀번호 확인</label>
-                <input type="password" name="confirmNewPassword" id="confirmNewPassword" placeholder="신규 비밀번호 확인" required="required"> <br>
-            </li>
-            <font id="checkMessage" size="2"></font>
-            <button type="submit" id="changePasswordBtn">비밀번호 변경</button>
-        </ul>
-    </form>
+<div class="container">
+    <div class="change">
+        <div class="change-con">
+            <div class="title">
+                <h1>비밀번호 변경</h1>
+            </div>
+            <div class="change-form">
+                <form id="changePasswordForm" th:action="@{/member/changePassword}" method="post">
+                    <ul>
+                        <li class="current">
+                            <input type="hidden" name="memberId" id="memberId" th:value="${memberId}">
+                            <div class="current-group">
+                                <label th:for="currentPassword">현재 비밀번호</label>
+                                <div class="writeC">
+                                    <input type="password" name="currentPassword" id="currentPassword" placeholder="현재 비밀번호" required="required">
+                                    <button type="button" id="checkCurrentPasswordBtn">현재 비밀번호 확인</button>
+                                </div>
+                            </div>
+                            <div class="current-check">
+                                <div id="currentPasswordMessage" style="color: red;"></div>
+                            </div>
+                        </li>
+                        <li class="new">
+                            <div class="new-group">
+                                <label th:for="newPassword">신규 비밀번호</label>
+                                <div class="writeN">
+                                    <input type="password" name="newPassword" id="newPassword" placeholder="신규 비밀번호" required="required">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="newCheck">
+                            <div class="newC-group">
+                                <label th:for="confirmNewPassword">신규 비밀번호 확인</label>
+                                <div class="writeNC">
+                                    <input type="password" name="confirmNewPassword" id="confirmNewPassword" placeholder="신규 비밀번호 확인" required="required">
+                                </div>
+                            </div>
+                            <div class="message">
+                                <font id="checkMessage" size="4"></font>
+                            </div>
+                        </li>
+                        <li class="changeBtn">
+                            <button type="submit" id="changePasswordBtn">비밀번호 변경</button>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 </body>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
