semiMember confirmEmail 디자인

--- a/src/main/resources/templates/semiMember/confirmEmail.html
+++ b/src/main/resources/templates/semiMember/confirmEmail.html
@@ -9,31 +9,47 @@
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
-<h1>이메일 인증</h1>
-<form th:action="@{/semiMember/delete/{semiMemberId}(semiMemberId=${semiMemberId})}" id="confirmEmailForm">
-    <ul>
-        <li>
-            <label th:for="semiMemberEmail">이메일</label>
-            <input type="email" name="semiMemberEmail" id="semiMemberEmail" th:value="${semiMember.semiMemberEmail}" readonly> <br>
-        </li>
-        <!-- 인증번호 입력란 -->
-        <li>
-            <label th:for="emailVerificationCode">인증번호</label>
-            <input type="text" id="emailVerificationCode" placeholder="인증번호 입력">
-            <button type="button" id="verifyEmailButton">인증번호 확인</button>
-        </li>
-        <!-- 이메일 인증 버튼 -->
-        <li>
-            <button type="button" id="certifyEmailButton">인증번호 전송</button>
-        </li>
-        <!-- 인증 결과 메시지 영역 -->
-        <li>
-            <div id="certifyEmailMessage" class="valid-feedback" style="display: none;"></div>
-        </li>
-        </li>
-    </ul>
-    <button type="submit" id="deleteBtn">삭제</button>
-</form>
+<div class="container">
+    <div class="confirm">
+        <div class="confirm-con">
+            <div class="title">
+                <h1>이메일 인증</h1>
+            </div>
+            <div class="confirm-form">
+                <form th:action="@{/semiMember/delete/{semiMemberId}(semiMemberId=${semiMemberId})}" id="confirmEmailForm">
+                    <ul>
+                        <li class="email">
+                            <div class="email-group">
+                                <label th:for="semiMemberEmail">이메일</label>
+                                <div class="writeE">
+                                    <input type="email" name="semiMemberEmail" id="semiMemberEmail" th:value="${semiMember.semiMemberEmail}" readonly>
+                                    <!-- 이메일 인증 버튼 -->
+                                    <button type="button" id="certifyEmailButton">인증번호 전송</button>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- 인증번호 입력란 -->
+                        <li class="num">
+                            <div class="num-group">
+                                <label th:for="emailVerificationCode">인증번호</label>
+                                <div class="numInput">
+                                    <input type="text" id="emailVerificationCode" placeholder="인증번호 입력">
+                                    <button type="button" id="verifyEmailButton">인증번호 확인</button>
+                                </div>
+                            </div>
+                            <div class="num0feedback">
+                                <div id="certifyEmailMessage" class="valid-feedback" style="display: none;"></div>
+                            </div>
+                        </li>
+                        <li class="delete">
+                            <button type="submit" id="deleteBtn">삭제</button>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
